--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,20 +3,14 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
+   - title: "Porjects"
+    url: /publications/
 
-  - title: "Teaching"
-    url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
+    - title: "Awards"
+    url: /cv/
     
   - title: "CV"
     url: /cv/
     
-  - title: "Guide"
+  - title: "Related Links"
     url: /markdown/
