--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Yetong Cao"
-  avatar           : "pro.png"
+  avatar           : "pro2.png"
   bio              : "Postdoctoral Fellow"
   location         : "NTU, Singapore"
   employer         :
