--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "YetongCao's Homepage"
+title                    : "Yetong Cao's Homepage"
 title_separator          : "-"
 name                     : &name "Your Name"
 description              : &description "personal description"
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Yetong Cao"
+  name             : "Yetong Cao (曹烨彤)"
   avatar           : "pro2.png"
   bio              : "Postdoctoral Fellow"
   location         : "NTU, Singapore"
