--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,7 +16,7 @@ main:
     url: /year-archive/
     
   - title: "CV"
-    url: (../files/EarACE.pdf)
+    url: (../files/CV_yetong_Cao.pdf)
     
   - title: "Guide"
     url: /markdown/
