--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,10 +3,10 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Talks"
+  - title: "Patents"
     url: /talks/    
 
-  - title: "Teaching"
+  - title: "AWards"
     url: /teaching/    
     
   - title: "Portfolio"
@@ -18,5 +18,5 @@ main:
   - title: "CV"
     url: /cv/
     
-  - title: "Guide"
+  - title: "Miscellany"
     url: /markdown/
