--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ main:
     url: /talks/    
 
   - title: "AWards"
-    url: /teaching/    
+    url: /awards/    
     
   - title: "Portfolio"
     url: /portfolio/
