--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,8 +6,8 @@ main:
   - title: "Patents"
     url: /talks/    
 
-  - title: "AWards"
-    url: /awards/    
+  - title: "Professional Activities"
+    url: /activities/    
     
   - title: "Portfolio"
     url: /portfolio/
