--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ main:
     url: /publications/
 
   - title: "Patents"
-    url: /talks/    
+    url: /patents/    
 
   - title: "Professional Activities"
     url: /activities/    
