--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,11 +9,9 @@ main:
   - title: "Professional Activities"
     url: /activities/    
     
-  - title: "Portfolio"
+  - title: "Awards"
     url: /portfolio/
         
-  - title: "Blog Posts"
-    url: /year-archive/
     
   - title: "CV"
     url: /mycv/
