--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,10 +1,19 @@
 # main links links
 main:
-  - title: "Publications"
+
+- title: "Publications"
     url: /publications/
 
-  - title: "Patents"
-    url: /patents/    
+  - title: "Talks"
+    url: /talks/    
+
+  - title: "Teaching"
+    url: /teaching/    
+    
+        
+  - title: "Blog Posts"
+    url: /year-archive/
+    
 
   - title: "Professional Activities"
     url: /activities/    
