--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -19,7 +19,7 @@ main:
     url: /activities/    
     
   - title: "Awards"
-    url: /portfolio/
+    url: /awards/
         
     
   - title: "CV"
