--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,11 +3,7 @@ main:
   - title: "Publications"
     url: /publications/
 
-
-  - title: "Talks"
-    url: /talks/    
-
-  - title: "Teaching"
+  - title: "Patents"
     url: /teaching/    
     
   - title: "Professional Activities"
