--- a/_config.yml
+++ b/_config.yml
@@ -82,12 +82,12 @@ analytics:
 author:
   name             : "Yetong Cao (曹烨彤)"
   avatar           : "pro4.png"
-  bio              : "Postdoctoral Fellow"
-  location         : "NTU, Singapore"
+  bio              : "Professor"
+  location         : "SDU, China"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=5bowhjcAAAAJ&hl=zh-CN&oi=ao"
-  email            : "yetong.cao@ntu.edu.sg"
+  email            : "yetong.cao@sdu.edu.cn"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
