--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Yetong Cao (曹烨彤)"
   avatar           : "pro4.png"
   bio              : "Professor"
-  location         : "SDU, China"
+  location         : "408-1, N3 Floor,SDU, Qingdao, China"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=5bowhjcAAAAJ&hl=zh-CN&oi=ao"
